--- a/Assessments/M2 Lead/idex.html
+++ b/Assessments/M2 Lead/idex.html
@@ -54,7 +54,7 @@ align:center;
 
 <p>
 </p><h3>
-We welcome you to our page!! myself arvind .I am arvind my Computer Science and Engineering Degree in VelTech HighTech.  This is a webpage created using html and css.   
+We welcome you to our page!! myself kiruba .I am kiruba my Computer Science and Engineering Degree in VelTech HighTech.  This is a webpage created using html and css.   
 </h3>
 <p></p>
 
